@@ -16,7 +16,7 @@ copyright_year   = 2018
 run = mv Changes tmp && cp %n-%v/Changes Changes
 [InstallGuide]
 
-[MetaProvides]
+;[MetaProvides::Class]
 [PodWeaver]
 [ReadmeAnyFromPod]
 type = markdown
