@@ -1,4 +1,9 @@
-Revision history for Dancer2-Plugin-MarkdownFilesToHTML
+Revision history for {{$dist->name}}
+
+{{$NEXT}}
+  - fix critical bug where local options were getting ignored
+  - add test to see if prefixes work as advertised
+  - fix internal document links
 
 0.016     2018-11-08 20:27:01-05:00 America/New_York
   - Add #Abstract comment
@@ -11,6 +16,10 @@ Revision history for Dancer2-Plugin-MarkdownFilesToHTML
   - remove unneeded test code
   - add and improve code comments
   - documentation rearrangement and improvements
+  - major overhaul to code
+    - replace two keywords with single keyword
+    - made use of Moo attributes for loading configuration defaults
+    - streamlined code and code logic
 
 0.014     2018-11-07 11:29:25-05:00 America/New_York
   - make saving cache files cross platform (win32)
